z-index problem fixed

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
     position: fixed;
     width: 100%;
     top: 0;
+    z-index: 1;
 }
 
 #navbar a {
@@ -48,6 +49,7 @@ span {
     font-size: 30px;
     color: rgb(255, 255, 255);
     transition: 0.2s;
+    z-index: 2;
 }
 
 .sidebar-closed {
