--- a/src/pages/TopMovies.css
+++ b/src/pages/TopMovies.css
@@ -7,7 +7,6 @@
     margin-top: 10px;
     position: absolute;
     top: 150px;
-    z-index: -1;
 }
 
 .top-movies-movie-container {
